Update footer, compile styles, add disclaimer, fix loan and website links.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<p>Save up to <strong>$<span class="result loan-personal"></span></strong> on your <strong>Personal Loan</strong>.</p>
 				<p>Additional savings may be possible! Contact us for details.</p>
 				<div class="text-center pad">
-					<a href="https://www.loanliner.com/LoanRequest/CLPPresenter/LoanList.aspx?CUID=03203668&LoanListId=777&ChannelId=2903987303195131723&LocationId=5869857303189165533&IsFramed=F" class="btn apply" onClick="_gaq.push(['_trackEvent', 'Apply', 'Click', 'Clicked Apply Button']);">I'm Ready!<span>Apply Now!</span></a>
+					<a href="https://secure.loanspq.com/Consumer/login/default.aspx?enc2=CjDDGQgp6ViDEpMSQAmj1PRGeJoOdnWVbfanJd5M9GdLvURshrbm3kAKICtvsh69cIJlAJnj4yROFZv7t4RBHNGIi4vVsSqHUKuCFruINM-fzBRb-mlOCJfmsYXjVvInWTo7nE4q0qz5UMpbsrJdKTWQOR_wuW1PRPun-1dBGoU" class="btn apply" onClick="_gaq.push(['_trackEvent', 'Apply', 'Click', 'Clicked Apply Button']);">I'm Ready!<span>Apply Now!</span></a>
 					<a class="btn go-back">&laquo; go back</a>
 				</div>
 
@@ -105,22 +105,12 @@
 		</div>
 
 		<div class="footer-bar group">
-			<div class="wrap">
-
-				<div class="half separator">
-					<a href="https://dukefcu.org/"><img src="img/logo.png"></a>
-				</div>
-				<div class="half">
-					<h2>(919) 684-6704</h2>
-					<h3><a href="https://dukefcu.org">dukefcu.org</a></h3>
-				</div>
-
-
-			</div>
+			<a href="https://www.heritagevalleyfcu.org/"><img src="img/logo.png"></a>
 		</div>
 
 		<div class="fine-print group wrap">
-			*APR= Annual Percentage Rate. Rates are subject to change and to credit approval. 1.99% APR is available on auto loans for 36 months or less and auto must be eight years old or newer. Limited time offer. Rate and promotion are subject to change at any time. See credit union for details. Loan Calculator based on best scenario. Your savings may be different depending on your unique situation and creditworthiness. Duke Credit Union is insured by the National Credit Union Administration.
+			<img src="img/logo-equal-housing.png">
+			* APR = Annual Percentage Rate. Rates as of 1/1/17. Credit restrictions apply. Rates based on creditworthiness, term and other factors. Rate and promotion are subject to change at any time. See credit union for details. All loans subject to approval. Membership eligibility required. A Prime Share account (membership) with a minimum deposit is required upon loan approval. Calculator based on best scenario. Your savings may be different depending on your unique situation, creditworthiness and member relationship. These calculators are intended to help you analyze your financial needs and/or provide approximate information about loan payments; they do not constitute an offer to extend credit.  Federally insured by NCUA.
 		</div>
 
 	</main>
