--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<div class="intro group">
 					<div class="savings-thermometer" data-giraph-api-key="b1897d5f9b0ac294fcd5ce7da30d8395"></div>
-					<script src="//giraph.io/api/thermometer/v1/js/widget.js"></script>
+					<script src="//giraph.io/api/thermometer/v1/js/widget.js?v=1"></script>
 					<p>Our goal is to save the residents of York County $500,000 in interest and fees this year, to show how effortless saving really can be.</p>
 					<p>Tell us a little bit about your loans, and we’ll help you save.</p>
 				</div>
