Refine tablet styles.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
 					<div class="group"></div>
 				</div>
 
-				<button class="calculate"><span>Effortlessly</span> Save More</button>
+				<div class="buttons">
+					<button class="calculate"><span>Effortlessly</span> Save More</button>
+				</div>
 
 			</div>
 
