Update auto rate, auto images, and disclaimer text.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<div class="thirty">
 						<p><label for="amount">your balance</label><input type="text" placeholder="10,000" class="amount" /></p>
 						<p><label for="rate">your rate</label><input type="text" placeholder="5.99" class="rate percent" /></p>
-						<input type="hidden" class="rate_compare" value="1.99" />
+						<input type="hidden" class="rate_compare" value="1" />
 					</div>
 					<div class="thirty">
 						<p><label for="term">your term</label>
@@ -126,7 +126,7 @@
 
 		<div class="fine-print group wrap">
 			<img src="img/logo-equal-housing.png">
-			* APR = Annual Percentage Rate. Rates as of 1/1/17. Credit restrictions apply. Rates based on creditworthiness, term and other factors. Rate and promotion are subject to change at any time. See credit union for details. All loans subject to approval. Membership eligibility required. A Prime Share account (membership) with a minimum deposit is required upon loan approval. Calculator based on best scenario. Your savings may be different depending on your unique situation, creditworthiness and member relationship. These calculators are intended to help you analyze your financial needs and/or provide approximate information about loan payments; they do not constitute an offer to extend credit.  Federally insured by NCUA.
+			* APR = Annual Percentage Rate. Rates as of 1/1/17. Credit restrictions apply. Rates based on creditworthiness, term and other factors. Rate and promotion are subject to change at any time. See credit union for details. All loans subject to approval. Membership eligibility required. A Prime Share account (membership) with a minimum deposit is required upon loan approval. Calculator based on best scenario. Your savings may be different depending on your unique situation, creditworthiness and member relationship. These calculators are intended to help you analyze your financial needs and/or provide approximate information about loan payments; they do not constitute an offer to extend credit.  Federally insured by NCUA. Auto Loans: As low as rate of 1.00% APR is based on a term of up to 24 months for qualified borrowers including a 0.50% APR reduction for automatic payment service. (APR Annual Percentage Promotional Rates are based on a primary borrower’s creditworthiness with a range of 1.00% - 17.99% for auto purchase or refinance loan submitted and approved during the promotional period only.  Minimum to receive discounted rate is 12 months with a maximum term of 72 months.  All loans subject to credit approval and standard underwriting guidelines apply.  Promotion may not be used to refinance current HVFCU loans or loans financed through HVFCU Indirect Auto Dealers. Membership eligibility required.  Limited time offer and can be withdrawn at any time at the discretion of the Credit Union.
 		</div>
 
 	</main>
