--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 				<div class="loan-auto calculator bg-blue">
 					<div class="fourty">
-						<img src="img/rate-auto.png">
+						<img src="img/rate-auto.png?v=1">
 					</div>
 					<div class="thirty">
 						<p><label for="amount">your balance</label><input type="text" placeholder="10,000" class="amount" /></p>
@@ -53,7 +53,7 @@
 
 				<div class="home calculator bg-green">
 					<div class="fourty">
-						<img src="img/rate-home.png">
+						<img src="img/rate-home.png?v=1">
 					</div>
 					<div class="thirty">
 						<p><label for="amount">your balance</label><input type="text" placeholder="20,000" class="amount" /></p>
